--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </style>
     </head>
     <body><center>
+        <embed src="https://blog-1258750961.cos.ap-beijing.myqcloud.com/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E7%AE%80%E5%8D%95%E7%88%B1.mp3" hidden="true" type="">
         <h1>
             <u><font size="4" color="blue">给</font>
             <font face="楷体" size="8" color="purple" >何佳媛</font>
@@ -43,6 +44,5 @@
         <img width="800" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E5%81%B7%E5%81%B7%E6%89%93%E6%B8%B8%E6%88%8F.jpg" alt="">
         <p><b><i>偷偷打游戏的你呀，要拖出去罚跑一圈。</i></b></p>
         <br>
-        <embed src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E7%AE%80%E5%8D%95%E7%88%B1.mp3" hidden="true" type="">
     </body>
 </html>
