--- a/index.html
+++ b/index.html
@@ -1,24 +1,53 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>
             有你的日子就算吵架也很温暖！
         </title>
         <style type="text/css">
             body{
                 background: url(http://mctbag.oss-cn-shanghai.aliyuncs.com/%E8%83%8C%E6%99%AF.jpg) fixed; 
-                background-size: 800px 800px;
+                background-size: 1000px 900px;
             }
             .div1{
                 border-style: solid;
                 border-color:red green blue pink;
             }
-            p{
-                color: rgb(31, 255, 61);
+            .t1{
+                color: rgb(247, 148, 56);
             }
+            .t2{
+                color: #bffa34f5;
+            }
+            .t3{
+                color: rgba(17, 252, 29, 0.961);
+            }
+            .t4{
+                color: #0ff0f8f5;
+            }
+            .t5{
+                color: #3717e9f5;
+            }
+            .t6{
+                color: rgba(247, 7, 247, 0.961);
+            }
+            /* p{
+                color: rgb(255, 148, 49);
+            } */
         </style>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/spig.js"></script>
+
+    <link rel="stylesheet" href="css/spigPet.css" type="text/css"/>
+
+    <script type="text/javascript">
+    var isindex = true;
+    var visitor = true;
+    </script>
+
     </head>
     <body><center>
-        <embed src="https://blog-1258750961.cos.ap-beijing.myqcloud.com/%E5%91%A8%E6%9D%B0%E4%BC%A6%20-%20%E7%AE%80%E5%8D%95%E7%88%B1.mp3" hidden="true" type="">
         <h1>
             <u><font size="4" color="blue">给</font>
             <font face="楷体" size="8" color="purple" >何佳媛</font>
@@ -27,22 +56,37 @@
         </h1>
         <br>
         <img width="400" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E5%BD%B1%E5%AD%90.jpg" alt="">
-        <p><b><i>这是我们在阳光下开的伞，如影随形。</i></b></p>
+        <p><b><i><font face="楷体" size="6" color="red" >这是我们在阳光下开的伞，如影随形。</font></i></b></p>
         <br>
         <img width="800" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E7%94%B5%E5%BD%B1.jpg" alt="">
-        <p><b><i>每次和你去看电影你都问我电影好看吗，其实最好看的电影是你。</i></b></p>
+        <p class="t1"><b><i><font face="楷体" size="6">每次和你去看电影你都问我电影好看吗，其实最好看的电影是你。</font></i></b></p>
         <br>
         <img width="400" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/love.jpg" alt="">
-        <p><b><i>我在这个时候就喜欢上了LOVE。</i></b></p>
+        <p class="t2"><b><i><font face="楷体" size="6">我在这个时候就喜欢上了LOVE。</font></i></b></p>
         <br>
         <img width="400" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E8%BD%A6%E7%A5%A8.jpg" alt="">
-        <p><b><i>这段距离是等待，也是期待。</i></b></p>
+        <p class="t3"><b><i><font face="楷体" size="6">这段距离是等待，也是期待。</font></i></b></p>
         <br>
         <img width="400" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E5%8F%AF%E7%88%B1.jpg" alt="">
-        <p><b><i>想就这样牵着你的手不放开，吹着威风，吹着喜爱。</i></b></p>
+        <p class="t4"><b><i><font face="楷体" size="6">想就这样牵着你的手不放开，吹着威风，吹着喜爱。</font></i></b></p>
         <br>
         <img width="800" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E5%81%B7%E5%81%B7%E6%89%93%E6%B8%B8%E6%88%8F.jpg" alt="">
-        <p><b><i>偷偷打游戏的你呀，要拖出去罚跑一圈。</i></b></p>
+        <p class="t5"><b><i><font face="楷体" size="6">偷偷打游戏的你呀，要拖出去罚跑一圈。</font></i></b></p>
         <br>
+        <img width="1000" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/3%E4%BA%BA.jpg" alt="">
+        <p class="t6"><b><i><font face="楷体" size="6">你好好看呀！你舍友都不敢笑了，假笑假笑...haha</font></i></b></p>
+        <br>
+        <embed src="http://mctbag.oss-cn-shanghai.aliyuncs.com/%E7%AE%80%E5%8D%95%E7%88%B1.mp3" hidden="true" type="">
+    <div style=" margin:100px auto; width:990px; height:500px;">
+    </div>
+
+    <!--小人只在首页显示 start*-->
+    <div id="spig" class="spig">
+        <div id="message">正在加载中……</div>
+        <div id="mumu" class="mumu"></div>
+    </div>
+    <!--小人end*-->
+    <div style="text-align:center;clear:both">
+
     </body>
 </html>
