--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img width="1000" src="http://mctbag.oss-cn-shanghai.aliyuncs.com/3%E4%BA%BA.jpg" alt="">
         <p class="t6"><b><i><font face="楷体" size="6">你好好看呀！你舍友都不敢笑了，假笑假笑...haha</font></i></b></p>
         <br>
-        <embed src="http://mctbag.oss-cn-shanghai.aliyuncs.com/mct/ani.mp3" type="">
+        <embed src="http://mctbag.oss-cn-shanghai.aliyuncs.com/mct/ani.mp3" hidden="true" autostart="true" loop="true">
     <div style=" margin:100px auto; width:990px; height:500px;">
     </div>
 
