--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 color: rgb(247, 148, 56);
             }
             .t2{
-                color: #bffa34f5;
+                color: rgb(239, 255, 20);
             }
             .t3{
                 color: rgba(17, 252, 29, 0.961);
             }
             .t4{
-                color: #0ff0f8f5;
+                color: rgb(7, 238, 255);
             }
             .t5{
-                color: #3717e9f5;
+                color: rgb(61, 7, 255);
             }
             .t6{
                 color: rgba(247, 7, 247, 0.961);
