--- a/index.html
+++ b/index.html
@@ -91,5 +91,7 @@
     <!--小人end*-->
     <div style="text-align:center;clear:both">
 
+	<center>
+		<a herf="https://pickmct.github.io/tutu"><font face="楷体" size="8" color="bule" >点这里</font></a>
     </body>
 </html>
