--- a/index.html
+++ b/index.html
@@ -90,8 +90,6 @@
     </div>
     <!--小人end*-->
     <div style="text-align:center;clear:both">
-
-	<center>
-		<a herf="https://pickmct.github.io/tutu"><font face="楷体" size="8" color="bule" >点这里</font></a>
+	<a href="https://pickmct.github.io/tutu" style="text-align: center;font-size: 18px;color: blue;font-family: 楷体"></a>
     </body>
 </html>
