--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div id="mumu" class="mumu"></div>
     </div>
     <!--小人end*-->
-    <div style="text-align:center;clear:both">
-	<a href="https://pickmct.github.io/tutu" style="text-align: center;font-size: 18px;color: blue;font-family: 楷体"></a>
+
+	<a href="https://pickmct.github.io/tutu" style="text-align: center;font-size: 18px;color: blue;font-family: 楷体">点这里</a>
     </body>
 </html>
