--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
     </div>
     <!--小人end*-->
 
-	<a href="https://pickmct.github.io/tutu" style="text-align: center;font-size: 100px;color: blue;font-family: 楷体">点这里</a>
+	<a href="https://pickmct.github.io/tutu" style="text-align: center;font-size: 100px;color: red;font-family: 楷体">点这里</a>
     </body>
 </html>
